--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-/*
+/* VINO
 Theme Name: ME – Resume and Personal Portfolio Responsive Template
-Author URI: http://webthemez.com/ 
+Author URI: http://webthemez.com/
 */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 * {
@@ -114,7 +114,7 @@ h2 {
 	padding-bottom: 16px;
 	font-variant: small-caps;
 }
-/* Header 
+/* Header
 ----------------------------------------------*/
 .header {
 	position: fixed;
@@ -291,7 +291,7 @@ box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
 }
 .banner-container > img {
 	width: 100%;
-	
+
 }
 .banner-content {
 	position: absolute;
@@ -398,7 +398,7 @@ box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
 }
 #aboutUs{
 padding-top:60px;
-background-color: rgb(16, 15, 15);	
+background-color: rgb(16, 15, 15);
 	}
 #aboutUs .txtHead {
 	background: #fff;
@@ -423,7 +423,7 @@ background-color: rgb(16, 15, 15);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
-.parlex-back { 
+.parlex-back {
 	padding: 60px 20px;
 	background-color: rgba(0, 0, 0, 0.37);
 	color: #FDFDFD !important;
@@ -456,7 +456,7 @@ background-color: rgb(16, 15, 15);
 	border-radius: 50%;
 	background-color: #FFF;
 }
-.diagram { 
+.diagram {
 	margin: 2em 2em 2em 0;
 	float: left;
 }
@@ -464,9 +464,9 @@ background-color: rgb(16, 15, 15);
 	margin-top: 106px;
 }
 .skillContainer{
-	margin-bottom: 50px;	
+	margin-bottom: 50px;
 	}
-.skillBox { 
+.skillBox {
 min-height:200px;
 }
 .container-sub {
@@ -496,7 +496,7 @@ min-height:200px;
 	top: 0;
 	left: 0;
 }
-.chart-text h4 { 
+.chart-text h4 {
 	font-size: 23px;
 }
 /*Experience*/
@@ -505,7 +505,7 @@ min-height:200px;
 }
 .experience-details .col-md-6{
 	margin-bottom: 40px;
-} 
+}
 .experience-details h4 {
 	margin: 4px 0px 2px;
 	font-size: 20px;
@@ -803,7 +803,7 @@ footer {
 .contact ul li i {
 	margin-right: 15px;
 }
- 
+
 /*Clients*/
 .clients #owl-demo .item {
 	background: none;
@@ -824,7 +824,7 @@ footer {
 	margin: 0px 5px;
 }
 #portfolio{
-background: url(../images/bg2.png) top repeat;	
+background: url(../images/bg2.png) top repeat;
 	}
 #contactUs{
 	background: url(../images/bg.jpg) top repeat;
@@ -848,7 +848,7 @@ background: url(../images/bg2.png) top repeat;
 .banner-container > img {
 	min-width: 100%;
 	height:400px;
-	
+
 }
 .team-member .member-img img {
 	max-width: 100%;
@@ -883,12 +883,12 @@ background: url(../images/bg2.png) top repeat;
 }
 .chart-text {
 	margin-top: 90px;
-	display: inline-block !important; 
+	display: inline-block !important;
 }
 .skillContainer{
-	margin-bottom: 50px;	
+	margin-bottom: 50px;
 	}
-.skillBox { 
+.skillBox {
 min-height:200px;
 display: inline-block;
 }
@@ -907,7 +907,7 @@ display: inline-block;
 
 @media (max-width: 480px) {
 .banner-container {
-	background-size: contain; 
+	background-size: contain;
 	overflow:hidden;
 }
 .header .container{
@@ -938,7 +938,7 @@ margin-top: 30%;
 	margin: 17px;
 }
 .banner-container > img {
-	width: auto; 
+	width: auto;
 	height:350px;
 }
 .page-section h1 {
@@ -962,12 +962,12 @@ margin-top: 30%;
 }
 .chart-text {
 	margin-top: -20px;
-	display: inline-block !important; 
+	display: inline-block !important;
 }
 .skillContainer{
-	margin-bottom: 50px;	
+	margin-bottom: 50px;
 	}
-.skillBox { 
+.skillBox {
 min-height:200px;
 display: inline-block;
 }
